kubernetes/dc-dao-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dc-dao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dc-dao
  template:
    metadata:
      name: dc-dao
      labels:
        app: dc-dao
    spec:
      containers:
      - name: dc-dao
        image: ghcr.io/oyd-private/dc-dao:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ghcr-registry-secret
---
kind: Service
apiVersion: v1
metadata:
  name: dc-dao
spec:
  selector:
    app: dc-dao
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dc-dao
  annotations:
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - my.hinterland.systems
    secretName: dc-dao-tls
  rules:
  - host: my.hinterland.systems
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: dc-dao
            port:
              number: 80
