kubernetes/dc-dga-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dc-dga-did
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dc-dga-did
  template:
    metadata:
      name: dc-dga-did
      labels:
        app: dc-dga-did
    spec:
      containers:
      - name: dc-dga-did
        image: ghcr.io/oyd-private/dc-dga:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ghcr-registry-secret
---
kind: Service
apiVersion: v1
metadata:
  name: dc-dga-did
spec:
  selector:
    app: dc-dga-did
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dc-dga-did
  annotations:
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassname: "nginx"
  tls:
  - hosts:
    - my.go-data.at
    secretname: dc-dga-did-tls
  rules:
  - host: my.go-data.at
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: dc-dga-did
            port:
              number: 80
