kubernetes/dc-dga-projects-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dc-dga-projects
  namespace: did
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dc-dga-projects
  template:
    metadata:
      name: dc-dga-projects
      labels:
        app: dc-dga-projects
    spec:
      containers:
      - name: dc-dga-projects
        image: ghcr.io/oyd-private/dc-dga:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ghcr-credentials
---
kind: Service
apiVersion: v1
metadata:
  name: dc-dga-projects
  namespace: did
spec:
  selector:
    app: dc-dga-projects
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dc-dga-projects
  namespace: did
  annotations:
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - projects.go-data.at
    secretName: dc-dga-projects-tls
  rules:
  - host: projects.go-data.at
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: dc-dga-projects
            port:
              number: 80
